--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,9 @@ dependencies {
 
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.4.1'
+    testImplementation group: 'junit', name: 'junit', version: '4.4'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.25.0'
+
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
